Add category to tasks
